--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Hossein Karami | حسین کرمی
+title: somaye khazaii |سمیه خزاعی
 email: hi@hosseinkarami.com
 description: توسعه‌دهنده رابط کاربری
 baseurl: "https://hosseinkarami.com/"
