--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: somaye khazaii |سمیه خزاعی
 email: hi@hosseinkarami.com
 description: توسعه‌دهنده رابط کاربری
-baseurl: "https://hosseinkarami.com/"
-url: "https://hosseinkarami.com"
+baseurl: "https://somayekhazaii.com/"
+url: "https://somayekhazaii.com"
 twitter: _Karamii
 github:  HosseinKarami
 behance: HosseinKarami
